# you-dump

./: Cargo.toml  README.adoc  index.html  you-dump.toml
package/archlinux/: PKGBUILD  sysusers-you-dump.conf  you-dump.service  you-dump.toml
src/: app.rs  config.rs  download.rs  error.rs  main.rs
static/: main.js  style.css
